--- a/src/main/resources/templates/fragments/main-content.html
+++ b/src/main/resources/templates/fragments/main-content.html
@@ -211,23 +211,23 @@
             <th:block class="container pt-0"th:each="entry : ${accountWithTransactionsByDate}">
 
 <!--            Accordion wrapper-->
-                <div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="false">
+                <div class="accordion md-accordion" role="tablist" aria-multiselectable="false">
 
                     <h4>
-                        <span class="mb-0" style="color: #F39200; font-weight: bold"  th:value="${entry.key}" th:text="${entry.key}">Datum></span>
+                        <span class="mb-0" style="color: #F39200; font-weight: bold"  th:value="${entry.key}" th:text="${#temporals.format(entry.key, 'd MMMM yyyy')}">Datum></span>
                     </h4>
 
                     <!-- Accordion card -->
                     <div class="card"  style="border-color: #312783;border-width: medium
-                         ;background-color:rgba(0,102,255, 0.2)" th:if="${not #lists.isEmpty(accountWithTransactionsByDate)}" th:each="t, iterStat : ${entry.value}">
-
+                         ;background-color:rgba(0,102,255, 0.2)" th:if="${not #lists.isEmpty(accountWithTransactionsByDate)}" th:each="t : ${entry.value}">
 
                         <!-- Card header -->
-                        <div href="collapseOne">
+                        <div href="collapse">
                             <h5>
                                 <th:block>
                                         <div class = panel-heading style="border-color: #312783;border-width: medium" >
-                                            <i data-toggle="card-collapse" data-parent="#accordion"  class="fas fa-angle-down rotate-icon; float-right" style="color: #F39200;font-size: x-large" ></i>
+                                            <i class="fas fa-angle-down rotate-icon; float-right" data-toggle="collapse" data-parent="#collapseOne"
+                                               aria-expanded="false" aria-controls="collapseOne" style="color: #F39200;font-size: x-large" ></i>
                                     <dl>
                                         <dt class="col-md-10" style="color: #312783" th:each="name : ${t.contraAccountHolderNames}" th:text="${name}" ></dt>
                                         <dd class="col-md-2; float-md-right" style="color: #312783" th:each="amount :${t.amount}"th:text="${t.showAmount()}"></dd>
@@ -239,7 +239,7 @@
                         </div>
 
                         <!-- Card body -->
-                        <div id="collapseOne">
+                        <div id="collapse" class="collapse">
                             <div class="card-body" style="background-color: rgba(243, 146, 0, 0.6)">
                                 <p style="color: #312783; font-size: large; font-weight: bold" th:each="description : ${t.description}" th:text="${t.showTransactionDetails()}"> </p>
                             </div>
@@ -262,6 +262,17 @@
 
     </div>
 </div>
+
+<script type="text/javascript">
+    $(document).ready(function() {
+        $('.collapseOne').on('shown.bs.collapse', function() {
+            $(this).parent().find('.fa-angle-down').removeClass('fa-angle-down').addClass('fa-angle-right')
+        });
+        $('.collapseTwo').on('shown.bs.collapse', function () {
+            $(this).parent().find('.fa-angle-right').addClass('collapseOne')
+        });
+    });
+</script>
 
 
 
